--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </section>
 
-        <section class="advantages-section">
+        <section class="advantages-section section-sizing">
             <div class="container">
                 <h2 class="hidden-title">Наши преимущества</h2>
                 <ul class="advantages-list">
@@ -65,7 +65,7 @@
             </div>
         </section>
 
-        <section class="our-work-section">
+        <section class="our-work-section section-sizing">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="image-box">
@@ -76,29 +76,37 @@
             </div>
         </section>
 
-        <section class="our-team-section">
+        <section class="our-team-section section-sizing">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="team-member"> 
                         <img src="./images/img3.jpg" alt="Igor_demyanenko_photo" width= "270" height= "260" class="team-pic" > 
-                        <h3 class="section-subtitle" >Игорь Демьяненко</h3> 
-                        <p class="description">Product Designer</p> 
+                        <div class="team-member-description">
+                            <h3 class="section-subtitle" >Игорь Демьяненко</h3> 
+                            <p class="description">Product Designer</p> 
+                        </div>
                     </li>
                     <li class="team-member">
                         <img src="./images/img4.jpg" alt="olga_repina_photo" width= "270" height= "260" class="team-pic">
-                        <h3 class="section-subtitle">Ольга Репина</h3>
-                        <p class="description">Frontend Developer</p>
+                        <div class="team-member-description">
+                            <h3 class="section-subtitle">Ольга Репина</h3>
+                            <p class="description">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-member">
                         <img src="./images/img5.jpg" alt="nikolai_tarasov_photo" width= "270" height= "260" class="team-pic">
-                        <h3 class="section-subtitle">Николай Тарасов</h3>
-                        <p class="description">Marketing</p>
+                        <div class="team-member-description">
+                            <h3 class="section-subtitle">Николай Тарасов</h3>
+                            <p class="description">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-member">
                         <img src="./images/img6.jpg" alt="mikhail_ermakov_photo" width= "270" height= "260" class="team-pic">
-                        <h3 class="section-subtitle">Михаил Ермаков</h3>
-                        <p class="description">UI Designer</p>
+                        <div class="team-member-description">
+                            <h3 class="section-subtitle">Михаил Ермаков</h3>
+                            <p class="description">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -108,7 +116,7 @@
 
     <footer>
         <div class="container footer">
-            <a href="./index.html" class="logo footer-logo" > <span class="footer-logo-color">Web</span>Studio</a>
+            <a href="./index.html" class="logo footer-logo"> <span class="footer-logo-color">Web</span>Studio</a>
             <address>
                 <ul class="contact-info-list">
                     <li> <a href="https://goo.gl/maps/kD56w3adbVaMPDdG7" class="address-link">г. Киев, пр-т Леси Украинки, 26</a> </li>
