--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 
     <main>
         <section>
-            <div class="container filter-section">
+            <div class="container section-sizing">
                 <h1 class="hidden-title">Portfolio</h1>
                 <ul class="filter" >
                     <li> <button type="button" class="filter-btn"> Все </button> </li>
@@ -47,64 +47,82 @@
                     <li class="box"> 
                         <a href="">
                             <img src="./images/img7.jpg" alt="pic-of-an-open-website-on-a-laptop" width="370" height="294"> 
-                            <h3 class="box-title">Технокряк</h3>
-                            <p class="box-description">Веб-сайт</p>
+                            <div class="box-text">
+                                <h3 class="box-title">Технокряк</h3>
+                                <p class="box-description">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="box">
                         <a href="">
                             <img src="./images/img8.jpg" alt="poster-New-Orlean-vs-Golden-Star" width="370" height="294">
-                            <h3 class="box-title">Постер New Orlean vs Golden Star</h3>
-                            <p class="box-description">Дизайн</p>
+                            <div class="box-text">
+                                <h3 class="box-title">Постер New Orlean vs Golden Star</h3>
+                                <p class="box-description">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="box">
                         <a href="">
                             <img src="./images/img9.jpg" alt="the-seafood-restaurant" width="370" height="294">
-                            <h3 class="box-title">Ресторан Seafood</h3>
-                            <p class="box-description">Приложение</p>
+                            <div class="box-text">
+                                <h3 class="box-title">Ресторан Seafood</h3>
+                                <p class="box-description">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="box">
                         <a href="">
                             <img src="./images/img10.jpg" alt="headphones-pic" width="370" height="294">
-                            <h3 class="box-title">Проект Prime</h3>
-                            <p class="box-description">Маркетинг</p>
+                            <div class="box-text">
+                                <h3 class="box-title">Проект Prime</h3>
+                                <p class="box-description">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="box"> 
                         <a href="">
                             <img src="./images/img11.jpg" alt="boxes" width="370" height="294"> 
-                            <h3 class="box-title">Проект Boxes</h3>
-                            <p class="box-description">Приложение</p>
+                            <div class="box-text">
+                                <h3 class="box-title">Проект Boxes</h3>
+                                <p class="box-description">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="box">
                         <a href="">
                             <img src="./images/img12.jpg" alt="picture-of-a-computer-screen" width="370" height="294">
-                            <h3 class="box-title">Inspiration has no Borders</h3>
-                            <p class="box-description">Веб-сайт</p>
+                            <div class="box-text">
+                                <h3 class="box-title">Inspiration has no Borders</h3>
+                                <p class="box-description">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="box">
                         <a href="">
                             <img src="./images/img13.jpg" alt="pic-of-an-open-article-Limited-Edition" width="370" height="294">
-                            <h3 class="box-title">Издание Limited Edition</h3>
-                            <p class="box-description">Дизайн</p>
+                            <div class="box-text">
+                                <h3 class="box-title">Издание Limited Edition</h3>
+                                <p class="box-description">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="box">
                         <a href="">
                             <img src="./images/img14.jpg" alt="pic-of-a-tag" width="370" height="294">
-                            <h3 class="box-title">Проект LAB</h3>
-                            <p class="box-description">Маркетинг</p>
+                            <div class="box-text">
+                                <h3 class="box-title">Проект LAB</h3>
+                                <p class="box-description">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="box">
                         <a href="">
                             <img src="./images/img15.jpg" alt="pic-of-a-Growing-Business-website-open-on-a-laptop" width="370" height="294">
-                            <h3 class="box-title">Growing Business</h3>
-                            <p class="box-description">Приложение</p>
+                            <div class="box-text">
+                                <h3 class="box-title">Growing Business</h3>
+                                <p class="box-description">Приложение</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
