--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main>
 
-        <section class="section-hero">
+        <section class="section-hero section-sizing">
             <div class="container">
                 <h1 class="main-header">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="order-btn"> <span class="order-btn-text">Заказать услугу</span> </button>
@@ -116,7 +116,7 @@
 
     <footer>
         <div class="container footer">
-            <a href="./index.html" class="logo footer-logo"> <span class="footer-logo-color">Web</span>Studio</a>
+            <a href="./index.html" class="logo footer-logo ft-lg"> <span class="footer-logo-color">Web</span>Studio</a>
             <address>
                 <ul class="contact-info-list">
                     <li> <a href="https://goo.gl/maps/kD56w3adbVaMPDdG7" class="address-link">г. Киев, пр-т Леси Украинки, 26</a> </li>
