--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main>
 
-        <section class="section-hero section-sizing">
+        <section class="section-hero">
             <div class="container">
                 <h1 class="main-header">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="order-btn"> <span class="order-btn-text">Заказать услугу</span> </button>
